force-app/main/default/objects/APT_Consolidated_Usage_Price_Tier__c/APT_Consolidated_Usage_Price_Tier__c.object-meta.xml
<CustomObject>
    <label>Consolidated Usage Price Tier</label>
    <nameField>
        <label>Consolidated Usage Price Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Usage Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>