force-app/main/default/objects/APT_Consolidated_Usage_Price_Tier__c/fields/APT_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Type__c</fullName>
    <label>Charge Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>