force-app/main/default/objects/APT_Consolidated_Usage_Price_Tier__c/fields/APT_Dimension_2_Value__c.field-meta.xml
<CustomField>
    <fullName>APT_Dimension_2_Value__c</fullName>
    <label>Dimension 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>