force-app/main/default/objects/APT_Consolidated_Usage_Price_Tier__c/fields/APT_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>APT_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>